# screener

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENCE  README.md  pyproject.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  python-app.yml
screener/: __init__.py  __main__.py  checker.py  diagnostic.py  kindle.py  screener.py  utils.py
screener/parser/: __init__.py  epub.py  kindle.py
screener/reader/: __init__.py  abstract.py  epub.py  kindle.py
screener/tests/: README.md  __init__.py  hey.py  laozi_tao-te-ching_james-legge.azw3  laozi_tao-te-ching_james-legge_with-script-tags.azw3  safe.html  safe_image.html  script_tags.html  test_kindle_files.py  test_parser.py  test_utils.py  unsafe_image.html  william-shakespeare_richard-ii _with-script-tags.epub  william-shakespeare_richard-ii.epub
scripts/: format.sh  lint.sh  test.sh
src/screener/: __init__.py  __main__.py  checker.py  cli.py  diagnostic.py  utils.py
src/screener/parser/: __init__.py  epub.py  kindle.py
src/screener/reader/: __init__.py  abstract.py  epub.py  kindle.py
tests/: README.md  __init__.py  edith-wharton_ethan-frome.mobi  safe_image.html  test_parser.py  test_utils.py
