[tool.poetry]
name = "Screener"
version = "0.2.1"
description = "Check e-book files for security and privacy issues."
license = "LGPL-3.0-only"
authors = ["Tom Kuson <mail@tjkuson.me>"]
repository = "https://github.com/tjkuson/screener/"

[tool.poetry.dependencies]
python = "^3.10"
EbookLib = "^0.18"
beautifulsoup4 = "^4.12.2"
mobi = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
mypy = "^1.2.0"
types-beautifulsoup4 = "^4.12.0.5"
ruff = "^0.0.267"
ssort = "^0.11.6"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "PTH",
    "ERA",
    "PGH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "TRY",
    "RUF",
]
ignore = [
    "D203",
    "D213",
]
line-length = 88
target-version = "py310"
[tool.ruff.per-file-ignores]
"screener/tests/*" = ["S101"]

[[tool.mypy.overrides]]
module = ["ebooklib", "ebooklib.epub", "mobi", "kindle"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
