[tool.poetry]
name = "Screener"
version = "0.2.3"
description = "Check e-book files for security and privacy issues."
authors = ["Tom Kuson <mail@tjkuson.me>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
    { include = "screener", from = "." },
]
repository = "https://github.com/tjkuson/screener/"
keywords = ["ebook", "security", "privacy", "epub", "mobi", "kindle"]
classifiers = [
    "Topic :: Security",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"
EbookLib = "^0.18"
beautifulsoup4 = "^4.12.2"
mobi = "^0.3.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
mypy = "^1.2.0"
types-beautifulsoup4 = "^4.12.0.5"
ruff = "^0.0.269"
ssort = "^0.11.6"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
select = [
    "F",       # Pyflakes
    "E", "W",  # pycodestyle
    "C90",     # mccabe
    "I",       # isort
    "N",       # pep8-naming
    "D",       # pydocstyle
    "UP",      # pyupgrade
    "ANN",     # flakes-annotations
    "S",       # bandit
    "FBT",     # flake8-boolean-trap
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "G",       # flake8-logging-format
    "PIE",     # flake8-pie
    "PT",      # flak8-pytest-style
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TCH",     # flake8-type-checking
    "ARG",     # flake8-unused-arguments
    "PTH",     # flake8-use-pathlib
    "PGH",     # pygrep-hooks
    "PL",      # Pylint
    "TRY",     # tryceratops
    "RUF",     # Ruff-specific rules
]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "D203",    # one-blank-line-before-class
    "D213",    # multi-line-summary-second-line
]
line-length = 88
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.flake8-type-checking]
strict = true

[[tool.mypy.overrides]]
module = ["ebooklib", "ebooklib.epub", "mobi", "kindle"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
