[project]
name = "screener"
version = "0.5.1"
description = "Check e-book files for security and privacy issues."
readme = "README.md"
authors = [
  { name = "Tom Kuson", email = "mail@tjkuson.me" }
]
requires-python = ">=3.10"
keywords = [
  "ebook",
  "security",
  "privacy",
  "epub",
  "mobi",
  "kindle",
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.10",
  "Topic :: Security",
  "Topic :: Utilities",
]
dependencies = [
  "beautifulsoup4>=4.12.2",
  "Ebooklib>=0.18",
  "mobi>=0.3.3",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.2.0",
  "pytest>=7.3.1",
  "types-beautifulsoup4>=4.12.0.5",
]

[tool.ruff]
select = [
    "F",       # Pyflakes
    "E", "W",  # pycodestyle
    "C90",     # mccabe
    "I",       # isort
    "N",       # pep8-naming
    "UP",      # pyupgrade
    "S",       # bandit
    "FBT",     # flake8-boolean-trap
    "B",       # flake8-bugbear
    "A",       # flake8-builtins
    "C4",      # flake8-comprehensions
    "DTZ",     # flake8-datetimez
    "EM",      # flake8-errmsg
    "EXE",     # flake8-executable
    "FA",      # flake8-future-annotations
    "ISC",     # flake8-implicit-str-concat
    "ICN",     # flake8-import-conventions
    "G",       # flake8-logging-format
    "PIE",     # flake8-pie
    "PT",      # flak8-pytest-style
    "RET",     # flake8-return
    "SIM",     # flake8-simplify
    "TID",     # flake8-tidy-imports
    "TCH",     # flake8-type-checking
    "ARG",     # flake8-unused-arguments
    "PTH",     # flake8-use-pathlib
    "PGH",     # pygrep-hooks
    "PL",      # Pylint
    "TRY",     # tryceratops
    "FLY",     # flynt
    "PERF",    # perflint
    "RUF",     # Ruff-specific rules
]
target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.flake8-type-checking]
strict = true

[tool.mypy]
exclude = ["dist"]

[[tool.mypy.overrides]]
module = ["ebooklib", "ebooklib.epub", "mobi", "kindle"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
